examples/invalid/semantics/double_free.aru
module examples.invalid.semantics.doubleFree

func main() {
    let buffer = alloc(64)
    free(buffer)

    // expected: memory error; `buffer` was already freed.
    free(buffer)
}